# CoBang

./: .crushignore  .gitignore  MANIFEST.in  README.md  README.rst  agents.md  babel.cfg  cobang.in  deb-packages.txt  devtool.py  justfile  meson-py-install.sh  meson.build  prek.toml  pyproject.toml  requirements-dev.txt  ruff.toml  setup.cfg  setup.py  vn.hoabinh.quan.CoBang.yaml
.agents/: AGENTS.md
.agents/skills/cobang-release/: SKILL.md
.agents/skills/gtk-signal-result/: SKILL.md
.github/: FUNDING.yml
cobang/: __init__.py  __main__.py  app.py  common.py  consts.py  logging.py  meson.build  messages.py  net.py  prep.py  resources.py  ui.py  wayland.py
data/: about.glade  cobang-resp.glade  main.glade  meson.build  url-display.glade  vn.hoabinh.quan.CoBang.appdata.xml  vn.hoabinh.quan.CoBang.appdata.xml.in  vn.hoabinh.quan.CoBang.desktop  vn.hoabinh.quan.CoBang.desktop.in  vn.hoabinh.quan.CoBang.gschema.xml  vn.hoabinh.quan.CoBang.metainfo.xml.in  vn.hoabinh.quan.CoBang.service.in  vn.hoabinh.quan.cobang.desktop  wifi-display.glade
data/24x24/: meson.build
data/48x48/: meson.build
debian/: changelog  control  copyright  install  rules  watch
debian/source/: options
dev/: check-ui-file-paths.nu  check-ui-file-paths.nu.new  extract-for-translating.nu  update-translated.nu
exe/: README.md  meson.build
flatpak/: add-wheels.nu  flatpak-pdm-generator.py  generated-pdm-sources.yml  generated-poetry-sources.yml  generated-sources.yaml  generated-sources.yml  libzbar.yml  requirements.txt
flatpak/learn/: com.github.bilelmoussaoui.Authenticator.yml
misc/: fallback_version.py.in  meson-py-install.sh
po/: CoBang.pot  LINGUAS  POTFILES  cobang.pot  de.po  es.po  fil.po  fr.po  hr.po  id.po  it.po  kh.po  lo.po  meson.build  ms.po  my.po  nl.po  pt-BR.po  pt_BR.po  ru.po  sk.po  th.po  tr.po  vi.po
po/fil/LC_MESSAGES/: cobang.po
po/id/LC_MESSAGES/: cobang.po
po/it/LC_MESSAGES/: cobang.po
po/kh/LC_MESSAGES/: cobang.po
po/lo/LC_MESSAGES/: cobang.po
po/ms/LC_MESSAGES/: cobang.po
po/my/LC_MESSAGES/: cobang.po
po/nl/LC_MESSAGES/: nl.po
po/th/LC_MESSAGES/: cobang.po
po/vi/LC_MESSAGES/: cobang.po
snap/: snapcraft.yaml
src/: app.py  cobang.gresource.xml  cobang.in  consts.py  custom_types.py  logging.py  meson.build  messages.py  net.py  prep.py  style.css  ui.py  url-display.blp  wifi-display.blp  window.blp  window.py
src/pages/: generator.py  generator_form.py  generator_qr_code.py  generator_qr_preview_pane.py  generator_starting.py  generator_wifi.py  generator_wifi_network_picker.py  meson.build  old_generator.py  old_generator_qr_code.py  old_generator_starting.py  old_generator_wifi.py  scanner.py
src/tests/: test_parse.py  test_serialization.py
src/ui/: generator-page.blp  generator-qr-code-page.blp  generator-starting-page.blp  generator-wifi-page.blp  old-generator-page.blp  scanner-page.blp  shortcuts-dialog.blp  window.blp
src/ui/generator/: form.blp  qr-code-page.blp  qr-preview-pane.blp  starting-page.blp  wifi-network-picker-dialog.blp  wifi-page.blp
src/ui/old-generator/: qr-code-page.blp  starting-page.blp  wifi-page.blp
src/ui/scanner/: url.blp
tests/: test_cobang.py  test_parse.py
