[tool.poetry]
name = "cobang"
version = "0.6.2"
description = "QR code scanner for Linux desktop"
authors = ["Nguyễn Hồng Quân <ng.hong.quan@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/hongquan/CoBang"
repository = "https://github.com/hongquan/CoBang.git"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"
logbook = "^1.5.3"
Pillow = "^7.1.2"
requests = "^2.24.0"
kiss-headers = "^2.2.3"
single-version = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
PyGObject-stubs = "^0.0.2"
black = {version = "^19.10b0", allow-prereleases = true}
BabelGladeExtractor = "^0.7.0"
click = "^7.1.2"
types-click = "^0.1.4"

[tool.poetry.scripts]
cobang = 'cobang.__main__:main'

[tool.black]
line-length = 120
target-version = ['py37']
skip-string-normalization = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
