[tool.poetry]
name = "cobang"
version = "0.10.3"
description = "QR code and barcode scanner for Linux desktop"
authors = ["Nguyễn Hồng Quân <ng.hong.quan@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/hongquan/CoBang"
repository = "https://github.com/hongquan/CoBang.git"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"
logbook = "^1.5.3"
Pillow = "^9.3.0"
requests = "^2.31.0"
kiss-headers = "^2.3.1"
single-version = "^1.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = {version = "^22.6.0", allow-prereleases = true}
BabelGladeExtractor = "^0.7.0"
click = "^8.1.3"
types-click = "^7.1.8"
typed-ast = "^1.5.4"

[tool.poetry.scripts]
cobang = 'cobang.__main__:main'

[tool.black]
line-length = 120
target-version = ['py37']
skip-string-normalization = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "E402",  # The way to use PyGobject requires to do something before import.
]

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
