[project]
name = "cobang"
version = "0.14.0"
description = "QR code and barcode scanner for Linux desktop"
authors = [
    {name = "Nguyễn Hồng Quân", email = "ng.hong.quan@gmail.com"},
]
dependencies = [
    "logbook<2.0.0,>=1.5.3",
    "Pillow<11.0.0,>=10.1.0",
    "requests<3.0.0,>=2.31.0",
    "kiss-headers<3.0.0,>=2.3.1",
    "single-version<2.0.0,>=1.5.1",
    "brotlicffi>=1.1.0.0",
]
requires-python = ">=3.8,<4.0"
readme = "README.rst"
license = {text = "GPL-3.0-or-later"}

[project.urls]
homepage = "https://github.com/hongquan/CoBang"
repository = "https://github.com/hongquan/CoBang.git"

[project.scripts]
cobang = "cobang.__main__:main"

[tool.pdm.dev-dependencies]
dev = [
    "pytest<8.0.0,>=7.2.0",
    "BabelGladeExtractor<1.0.0,>=0.7.0",
    "click<9.0.0,>=8.1.3",
    "types-click<8.0.0,>=7.1.8",
    "typed-ast<2.0.0,>=1.5.4",
]

[tool.pdm.build]
includes = []

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "E402",  # The way to use PyGobject requires to do something before import.
]

[tool.ruff.format]
quote-style = "single"
