# Ref: https://github.com/getting-things-gnome/gtg/blob/master/GTG/core/meson.build

sources = [
    '__init__.py',
    '__main__.py',
    'app.py',
    'common.py',
    'consts.py',
    'logging.py',
    'messages.py',
    'net.py',
    'prep.py',
    'resources.py',
    'ui.py',
]

python.install_sources(sources, pure: true, subdir: meson.project_name())
