# Install all Python files from the current directory
py_files = [
  '__init__.py',
  'generator.py',
  'generator_form.py',
  'generator_qr_preview_pane.py',
  'old_generator.py',
  'old_generator_starting.py',
  'old_generator_qr_code.py',
  'old_generator_wifi.py',
  'scanner.py',
]

install_data(
  py_files,
  install_dir: moduledir / 'pages'
)
